[tool.poetry]
name = "catch-a-bird"
version = "0.1.0"
description = ""
authors = ["Tatiana_Garbuzova <tatiannna0697@gmail.com>"]
readme = "README.md"
packages = [{include = "catch_a_bird"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
